fixed issue with card alignment

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ a {
   margin-right: auto;
   width: 20%;
 }
+.small {
+  font-size: 4.2rem;
+
+}
 .navbar {
   background: #131313;
   height: 80px;
